<resources>
    <string name="accepted">Accepted</string>
    <string name="accepted_adj">Accepted_Adj</string>
    <string name="accessing_or_changing_information">Accessing or changing Information</string>
    <string name="account_doesn_t_support_mpos">Account doesn\'t support sPOS</string>
    <string name="action_settings">Settings</string>
    <string name="add_range">NEW RANGE</string>
    <string name="adjustment">Adjustment</string>
    <string name="after_amount">After Discount</string>
    <string name="alert">Alert</string>
    <string name="alipay">Alipay</string>
    <string name="Alipay_label">ALIPAY</string>
    <string name="ALIPAYCNOFFL_label">ALIPAYCN OFFLINE</string>
    <string name="alipayhk">AlipayHK</string>
    <string name="ALIPAYHKOFFL_label">ALIPAYHK OFFLINE</string>
    <string name="ALIPAYOFFL_label">ALIPAY OFFLINE</string>
    <string name="alipayth">AlipayTH</string>
    <string name="all">All</string>
    <string name="american_express">American Express</string>
    <string name="amount">Amount</string>
    <string name="amount_error">Amount must be less than or equal to the original amount</string>
    <string name="amount_label">Amt:</string>
    <string name="apiID_pw_notset"> Please check if your API account is correct</string>
    <string name="app_name">sPOS(UAT)</string>
    <string name="apply">Apply</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="asiapay_may_share_information_with_">AsiaPay may share Information with:</string>
    <string name="attempt">Attempts</string>
    <string name="authorize">Authorize</string>
    <string name="authorized">Authorized</string>
    <string name="auto">Auto</string>
    <string name="available_payment_method">Payment Method</string>
    <string name="back">Back</string>
    <string name="batch_no">Batch No:</string>
    <string name="bharatpay">BharatPay</string>
    <string name="bin_range">Bin Range</string>
    <string name="bin_range_end">Range Start</string>
    <string name="bin_range_start">Range End</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_connect_fail">Printer connection failed</string>
    <string name="bluetooth_connect_success">Printer connection successful</string>
    <string name="bluetooth_no_start">Bluetooth device not started!</string>
    <string name="bluetooth_send_fail">Data transfer failed</string>
    <string name="boost">Boost</string>
    <string name="boost_exceed_1500">Transaction amount for Boost cannot exceed MYR1500.00</string>
    <string name="BOOSTOFFL_label">BOOST OFFLINE</string>
    <string name="bt_connected">Bluetooth connected</string>
    <string name="btnOrder">Order</string>
    <string name="c_amount">Amount:\u0020</string>
    <string name="c_merchant_ref">Merchant Ref No.:\u0020</string>
    <string name="c_payment_code">Payment Code:\u0020</string>
    <string name="c_payment_method">Payment Method:\u0020</string>
    <string name="c_payment_type">Payment Type:\u0020</string>
    <string name="cable">Cable</string>
    <string name="cable_connected">Cable connected</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_again">Cancel failed. Try again later.</string>
    <string name="cancel_done">Transaction cancelled successfully</string>
    <string name="cancelled">Cancelled</string>
    <string name="cannot_cancel">Transaction cancelled failed</string>
    <string name="capture">Capture</string>
    <string name="capture_c">CAPTURE</string>
    <string name="capture_transaction">Capture Transaction</string>
    <string name="card">Card</string>
    <string name="card_holder_signature">Card Holder Signature</string>
    <string name="card_payment">Card Payment</string>
    <string name="card_payments_menu">Card Payments</string>
    <string name="card_refund_pw_protect">Card Payment Refund</string>
    <string name="card_scheme">Card Scheme</string>
    <string name="card_scheme__merchant_not_supported">The card scheme is not supported for this merchant account</string>
    <string name="card_scheme_label">Card Scheme:</string>
    <string name="card_scheme_not_supported">The card scheme is not supported</string>
    <string name="card_scheme_onsales_not_supported">Transaction Type (Sales) is not supported in this card scheme</string>
    <string name="card_scheme_preauth_not_supported">Transaction Type (Pre Auth) is not supported in this card scheme</string>
    <string name="card_scheme_void_not_supported">Transaction Type (Void) is not supported in this card scheme</string>
    <string name="card_settlement_pw_protect">Card Payment Settlement</string>
    <string name="card_void_pw_protect">Card Payment Void</string>
    <string name="check">CHECK</string>
    <string name="check_ecr_connection">No connection. Please check ECR connection configuration.</string>
    <string name="check_internet">Check Internet Connection</string>
    <string name="check_status">Check Status</string>
    <string name="checkConnection">Check Connection</string>
    <string name="china_unionpay">China UnionPay</string>
    <string name="chip">Chip</string>
    <string name="choose_paygate_services">Please select a payment service</string>
    <string name="clear">CLEAR</string>
    <string name="configuration_updated">Configuration Updated</string>
    <string name="confirm">CONFIRM</string>
    <string name="confirm_cancel_qr">Do you confirm to cancel this transaction?</string>
    <string name="confirm_email">Email:\u0020</string>
    <string name="confirm_mobile_no">Mobile No.:\u0020</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="cont_notification">Our Service may change from time to time and/or we may stop (permanently or temporarily) providing the Service (or features within the Service), possibly without prior notice to you, except as otherwise provided in the Merchant Agreement. Our Service may, at some point, include advertisements, which may be targeted to the content or information on the Service, queries made through the Service, or from other information. The types and extent of advertising on the Service are also subject to change over time. In consideration for providing you the Service, you agree that we and our third party providers and partners may place advertising on our Service or in connection with the display of content or information on our Service. Certain features of our Service may be subject to additional terms or conditions, which will be posted with those features.</string>
    <string name="cont_ownership">The “sPOS” name and logos and all related names, design marks and slogans are the trademarks or service marks of AsiaPay. Both parties agree that any dispute arising out of this Agreement, or any relationship between the parties, will be resolved only in the courts in Hong Kong, SAR, and in no other jurisdiction. Each party submits to personal jurisdiction in Hong Kong, SAR. You may not remove, alter or obscure any copyright, trademark, service mark or other proprietary rights notices incorporated in or accompanying the App or the Service, including in any Content. You acknowledge and agree that any feedback, comments or suggestions you may provide regarding the App or the Service (“Feedback”) will be the sole and exclusive property of AsiaPay and you hereby irrevocably assign to us all of your right, title and interest in and to all Feedback.</string>
    <string name="cont_termination">If you breach any of the terms of these Terms, we have the right to suspend or disable your access to or use of the App and/or Service.</string>
    <string name="contact">Please contact us if you have any question about our Terms. \nGlobal Contact: http://asiapay.com/contactglobal_e.html \nEffective Date: September 1, 2013</string>
    <string name="contact_asiapay">Contact AsiaPay</string>
    <string name="contactless">Contactless</string>
    <string name="contactless_limit">Contactless Limit</string>
    <string name="cookies">Cookies</string>
    <string name="coupon">Coupon</string>
    <string name="create_transaction_failed">Create transaction failed</string>
    <string name="create_txn">Creating transaction...</string>
    <string name="curr_device">Currently selected device:</string>
    <string name="current_settlement">Current Settlement</string>
    <string name="current_settlement_title">Current Settlement Info</string>
    <string name="cvm">CVM</string>
    <string name="cvm_limit">CVM Limit</string>
    <string name="cvm_no">No CVM</string>
    <string name="cvm_offline_pin">Offline PIN</string>
    <string name="cvm_online_pin">Online PIN</string>
    <string name="cvm_sign">Signature</string>
    <string name="day">Day(s)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_clear">Clear</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_ok">Enter</string>
    <string name="digit_over_back_two">Decimal digits can not exceed two digits</string>
    <string name="digit_over_front_and_back">The number exceeds the limit</string>
    <string name="digit_over_front_ten">Integer digits can not exceed Ten-digits</string>
    <string name="diners_club">Diners Club/Discover</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="display_full">Display Full</string>
    <string name="done">Done</string>
    <string name="ecr_bluetooth_setup">ECR - Bluetooth Setup</string>
    <string name="ecr_cable_setup">ECR - Cable Setup</string>
    <string name="ecr_communication_conf">ECR Communication Configuration</string>
    <string name="ecr_conn_conf">ECR Connection Configuration</string>
    <string name="ecr_conn_health_check">ECR Connection Health Check</string>
    <string name="ecr_receipt_printing">ECR Receipt/Report Printing</string>
    <string name="ECR_signalMessage">Check your ECR connection and signal strength</string>
    <string name="ecr_wifi_setup">ECR - WiFi Setup</string>
    <string name="email">Email</string>
    <string name="emv_config">EMV Config</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="grand_total_amount">Grand Total Amount:</string>
    <string name="grand_total_sale_amt">Grand Total Sale Amount:</string>
    <string name="grand_total_sale_txn">Grand Total Sale Txn:</string>
    <string name="grand_total_void_amt">Grand Total Void Amount:</string>
    <string name="grand_total_void_txn">Grand Total Void Txn:</string>
    <string name="history_list">History</string>
    <string name="home_list">Home</string>
    <string name="host">Host:</string>
    <string name="locked">LOCKED</string>
    <string name="log_out_list">Log Out</string>
    <string name="mainmenu">MAIN MENU</string>
    <string name="pay_status">Payment Status:</string>
    <string name="payment_ref_no">Payment Ref No:</string>
    <string name="payment_result">Payment Result</string>
    <string name="r_amount">Amount:\u0020</string>
    <string name="r_pay_method">Payment Method:\u0020</string>
    <string name="read_card">Read Card</string>
    <string name="reason1">network request timeout</string>
    <string name="rejected">Rejected</string>
    <string name="report_list">Reports</string>
    <string name="retry_settlement">Retry Settlement</string>
    <string name="rs_aop_ACQ_PAYMENT_FAIL">Payment Failure</string>
    <string name="settings_list">Settings</string>
    <string name="settlement_batch_no">Settlement Batch No:</string>
    <string name="solution1">Please restart payment</string>
    <string name="start_settlement">START SETTLEMENT</string>
    <string name="support_list">Support</string>
    <string name="this_failure">Reason:\u0020</string>
    <string name="to_rectify">Solution:\u0020</string>
    <string name="try_again">TRY AGAIN</string>
</resources>