<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="
">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_list" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history_list" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_reports"
            android:title="@string/report_list" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_list" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/support_ic"
            android:title="@string/support_list" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out_list" />
    </group>
</menu>
