<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".PresentQR_failResult">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="center"
        android:orientation="vertical">

        <include
            layout="@layout/progress_circle_bar_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="12"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_payment_failure" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/rs_aop_ACQ_PAYMENT_FAIL"
            android:textColor="#0b609a"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="20"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/MerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="Merchant Name"
            android:textColor="#555555"
            android:textSize="@dimen/large_fontSize"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:text="@string/r_amount"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5.5"
                android:gravity="right">

                <TextView
                    android:id="@+id/wxCurrcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RMB"
                    android:textColor="#0b609a"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/wxAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/wxCurrcode"
                    android:gravity="right"
                    android:text="100.00"
                    android:textColor="#0b609a"
                    android:textSize="15sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:text="@string/r_pay_method"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/wxPaymentMethod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.5"
                android:gravity="right"
                android:textColor="#0b609a"
                android:textSize="15sp" />

            <!--<RelativeLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="6">-->

            <!--<ImageView-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/ic_quickpass" />-->

            <!--</RelativeLayout>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:text="@string/pay_status"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/wxPaymentStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.5"
                android:gravity="right"
                android:text="@string/rejected"
                android:textColor="#0b609a"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:text="@string/payment_ref_no"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtPayRef"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.5"
                android:gravity="right"
                android:text="Ref 123456"
                android:textColor="#0b609a"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="20"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"

                android:text="@string/this_failure"
                android:textColor="#555555"
                android:textSize="@dimen/s_fontSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/failreason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/reason1"
                android:textColor="@color/normal"
                android:textSize="@dimen/def_fontSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/to_rectify"
                android:textColor="#545456"
                android:textSize="@dimen/s_fontSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/failadvise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/solution1"
                android:textColor="@color/normal"
                android:textSize="@dimen/def_fontSize" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:weightSum="20">

        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@drawable/btn_lightblue"
            android:gravity="center"
            android:text="@string/mainmenu"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@drawable/btn_lightblue"
            android:text="@string/try_again"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>